--- a/src/Feature/Meetups/website/packages.config
+++ b/src/Feature/Meetups/website/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Sitecore.ExperienceForms" version="9.3.0" targetFramework="net472" />
+  <package id="Sitecore.ExperienceForms.Mvc" version="9.3.0" targetFramework="net472" />
   <package id="Sitecore.Kernel" version="9.3.0" targetFramework="net472" />
 </packages>
